--- a/templates/coreFunctions/index.html
+++ b/templates/coreFunctions/index.html
@@ -14,8 +14,16 @@
                 <!-- Create Post Card -->
 <div class="create-post-card glass-card">
     <div class="create-post-input" id="create-post-trigger">
-        <img src="{{ request.user.profile_picture.url }}" alt="{{ request.user.username }}" class="user-avatar">
-        <div class="input-placeholder">What's on your mind?</div>
+        {% if request.user.petownerprofile %}
+        <img src="{{ request.user.petownerprofile.human_image.url }}" alt="{{ request.user.username }}" class="user-avatar">
+    {% elif request.user.vetprofile %}
+        <img src="{{ request.user.vetprofile.vet_image.url }}" alt="{{ request.user.username }}" class="user-avatar">
+    {% else %}
+    <div class="no-image">
+        <i class="fas fa-user-circle"></i>
+    </div>
+    {% endif %}        
+    <div class="input-placeholder">What's on your mind?</div>
     </div>
 </div>
 
@@ -50,8 +58,13 @@
                             <div class="post-header">
                                 <span class="post-category">{{ post.category.name }}</span>
                                 <div class="post-meta">
-                                    <img src="{{ post.user.profile_picture.url }}" alt="{{ post.user.username }}" class="post-author-avatar">
-                                    <span class="post-author">Posted by u/{{ post.user.username }}</span>
+                                    {% if post.user.petownerprofile %}
+                                    <img src="{{ post.user.petownerprofile.human_image.url }}" alt="{{ post.user.username }}" class="post-author-avatar">
+                                {% elif post.user.vetprofile %}
+                                    <img src="{{ post.user.vetprofile.vet_image.url }}" alt="{{ post.user.username }}" class="post-author-avatar">
+                                {% else %}
+                                    <img src="{% static 'default-avatar.png' %}" alt="Default Avatar" class="post-author-avatar">
+                                {% endif %}                                    <span class="post-author">Posted by u/{{ post.user.username }}</span>
                                     <span class="post-time">{{ post.date|timesince }} ago</span>
                                 </div>
                             </div>
