--- a/templates/main/base1.html
+++ b/templates/main/base1.html
@@ -28,10 +28,20 @@
         <div class="nav-right">
             
             <div class="user-profile" id="profile-menu-btn">
-                <img src="{{ user.profile_image.url }}" alt="{{ user.username }}">
-                <div class="profile-menu">
+                {% if request.user.is_authenticated %}
+                {% if request.user.petownerprofile %}
+                    <img src="{{ request.user.petownerprofile.human_image.url }}" alt="{{ request.user.username }}" class="user-avatar">
+                {% elif request.user.vetprofile %}
+                    <img src="{{ request.user.vetprofile.vet_image.url }}" alt="{{ request.user.username }}" class="user-avatar">
+                {% else %}
+                <div class="no-image">
+                    <i class="fas fa-user-circle"></i>
+                </div>
+                {% endif %}
+            {% endif %}                
+            <div class="profile-menu">
                     <a href="{% url 'authUser:user-info' %}"><i class="fas fa-user"></i> My Profile</a>
-                    <a href=""><i class="fas fa-cog"></i> Settings</a>
+                    <a href="{% url 'authUser:account_settings' %}"><i class="fas fa-cog"></i> Settings</a>
                     <a href="{% url 'authUser:logoutUser' %}"><i class="fas fa-sign-out-alt"></i> Logout</a>
                 </div>
             </div>
